--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -33,11 +33,11 @@
           {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
         </span> -->
 
-        <div class="card-text bg-white p-3 d-flex justify-content-between h-20 w-20">
+        <div class="card-text bg-white p-3 d-flex justify-content-around h-20 w-20">
           <div class="mr-2 border w-25">
             <img src="https://loremflickr.com/1080/1024" class="float-left img-fluid mr-2 " />
           </div>
-          <div>
+          <div class="d-flex align-items-center">
             {{product.description}}
           </div>
           <div class="d-flex align-items-center">
@@ -68,5 +68,4 @@
       </div>
     </div>
   </div>
-
 </div>
