--- a/src/admin/admin.component.html
+++ b/src/admin/admin.component.html
@@ -5,10 +5,10 @@
 
   <div class="row mt-2">
     <div class="col-3">
-      <div class="btn-group-vertical" role="group">
-        <button type="button" class="btn btn-outline-info btn-block" routerLink="admin/main/products"
+      <div>
+        <button type="button" class="btn btn-outline-info btn-block" routerLink="/admin/main/products"
           routerLinkActive="active">Catalogue</button>
-        <button type="button" class="btn btn-outline-info btn-block" routerLink="admin/main/orders"
+        <button type="button" class="btn btn-outline-info btn-block" routerLink="/admin/main/orders"
           routerLinkActive="active">Order
           catalogue</button>
         <button type="button" class="btn btn-danger btn-block" (click)="logOut()">Log Out</button>
