--- a/src/admin/auth.component.html
+++ b/src/admin/auth.component.html
@@ -1,4 +1,7 @@
-<div class="bg-info p-2 text-center text-white">
+<div class="bg-info pl-2 pr-2 pb-2 text-center text-white">
+  <div class="row bg-dark text-white d-flex justify-content-between align-items-center">
+    <a class="navbar-brand p-2 text-white link-light" routerLink="/store">SPORTS STORE</a>
+  </div>
   <h3>Admin Area</h3>
 </div>
 <div *ngIf="errorMessage !=null" class="bg-danger mt-2 text-center text-white">
