--- a/src/admin/productTable.component.html
+++ b/src/admin/productTable.component.html
@@ -21,3 +21,5 @@
     </tr>
   </tbody>
 </table>
+
+<button class="btn btn-success btn-sm" routerLink='/admin/main/products/create'>Add new product</button>
