--- a/src/admin/productTable.component.html
+++ b/src/admin/productTable.component.html
@@ -22,4 +22,4 @@
   </tbody>
 </table>
 
-<button class="btn btn-success btn-sm" routerLink='/admin/main/products/create'>Add new product</button>
+<button class="btn btn-success btn-sm mt-3" routerLink='/admin/main/products/create'>Add new product</button>
