--- a/src/store/cartDetail.component.html
+++ b/src/store/cartDetail.component.html
@@ -15,6 +15,7 @@
         <th class="text-center">Product</th>
         <th class="text-center">Price</th>
         <th class="text-center">Subtotal</th>
+        <th class="text-center">Total with VAT</th>
       </tr>
     </thead>
     <tbody class="text-center">
@@ -24,6 +25,7 @@
         <td>{{line.product.name}}</td>
         <td class="text-center">{{line.product.price | currency:"USD":"symbol":"2.2-2"}}</td>
         <td class="text-center">{{line.lineTotal | currency:"USD":"symbol":"2.2-2"}}</td>
+        <td class="text-center">{{line.lineTotalVat | currency:"USD":"symbol":"2.2-2"}}</td>
         <td class="text-center">
           <button class="btn btn-danger" (click)="cart.removeLine(line.product.id)">Delete</button>
         </td>
@@ -33,6 +35,12 @@
       <tr>
         <td colspan="3">Total:</td>
         <td class="text-center">{{cart.cartPrice | currency:"USD":"symbol":"2.2-2"}}</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td colspan="3">Total with VAT:</td>
+        <td></td>
+        <td class="text-center">{{cart.cartPriceVat | currency:"USD":"symbol":"2.2-2"}}</td>
       </tr>
     </tfoot>
   </table>
